Readded view filter to fix dropdown style collapse

--- a/app/static_src/less/cube_img_blocks.less
+++ b/app/static_src/less/cube_img_blocks.less
@@ -78,7 +78,7 @@
   }
 }
 
-.cube-img-column-frame.add-action.mod-only{
+.cube-img-block.add-action.mod-only{
   width:100%;
   margin-bottom:2rem;
 }
